Added passport and twitter auth strategy example

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "locomotive": "0.3.x",
-    "locomotive-mongoose": "latest",
-    "mongoose": "latest",    
+    "locomotive-mongoose": "0.1.x",
+    "mongoose": "3.5.x",    
     "express": "3.x.x",
     "connect-powered-by": "0.1.x",
     "ejs": "0.8.x",
-    "ejs-locals": "latest"
+    "ejs-locals": "1.0.x",
+    "passport": "0.1.x",
+    "passport-twitter": "0.1.x"
   }
 }
